--- a/html/programming/p00_piano.html
+++ b/html/programming/p00_piano.html
@@ -211,7 +211,7 @@
 <body>
     by alextanhongpin, #amalaysianprogrammer
 	<div id='keyboard'></div><br>
-    <a class='load'>0 %</a>
+    <span class='load'>0 %</span>
 </body>
 
 </html>
