--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" href='img/icon.ico'>
 
     <meta charset="utf-8">
+    <meta name="description" content="The personal website of Alex Tan Hong Pin, a fellow programmer from Malaysia. He is on a journey to find ways to contribute to mankind and to change the world.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/grid_layout.css">
@@ -25,7 +26,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Dosis', sans-serif;
-    }
+            }
     
     body{
         display: block;
