--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="description" content="The personal website of Alex Tan Hong Pin, a fellow programmer from Malaysia. He is on a journey to find ways to contribute to mankind and to change the world.">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
+    <meta name="author" content="Alex Tan Hong Pin">  
+    
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/grid_layout.css">
     <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
