--- a/html/programming/p02_clock.html
+++ b/html/programming/p02_clock.html
@@ -9,6 +9,11 @@
     <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
 <style>
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
+    @font-face { 
+        font-family: Visitor; 
+        src: url('/fonts/visitor1.ttf'); 
+    } 
+    
     *{
         margin: 0;
         padding: 0;
@@ -80,7 +85,7 @@
         //part 1: clock body - frame
         context.beginPath();
         context.translate(x,y);
-        context.arc(0,0,110,0,Math.PI * 2);
+        context.arc(0,0,130,0,Math.PI * 2);
             context.shadowOffsetX = 5;
 			context.shadowOffsetY = 5;
 			context.shadowBlur = 5;
@@ -145,7 +150,7 @@
         
         for(var i=0; i<12; i++){
             context.beginPath();
-            context.font="20px Courier";
+            context.font="20px Visitor";
             var angle = i*30*Math.PI/180;
             context.translate(x,y+5);
             context.textAlign = 'center';
