--- a/html/programming/p00_piano.html
+++ b/html/programming/p00_piano.html
@@ -11,7 +11,7 @@
         font-family: 'Dosis', sans-serif;
     }
 	body{
-		background: #eee;
+		background: #fff;
 		height: 100%;
 		width: 100%;
 		padding: 0;
