--- a/html/programming/p01_calculator.html
+++ b/html/programming/p01_calculator.html
@@ -26,7 +26,7 @@
         -ms-user-select:none;
         cursor: pointer;
         user-select:none;
-        background: #eee;
+        background: #fff;
         width: 100%;
         height: 100%;
         display: block;
