--- a/html/programming/p02_clock.html
+++ b/html/programming/p02_clock.html
@@ -21,7 +21,7 @@
     }
     
     body{
-        background: #eee;
+        background: #fff;
         width: 100%;
         min-width: 240px;
         height: 100%;
@@ -36,7 +36,7 @@
 
     #canvas{
         display: block;
-        background: #eee;
+        background: #fff;
         position: absolute;
         top: 0;
     }
