--- a/html/resume.html
+++ b/html/resume.html
@@ -118,7 +118,7 @@
         <tr>
             <td class='col-2'><b>Personal Data</b></td>
             <td class='col-5'></td>
-            <td class='col-2'><img src='/img/My%20Picture1.jpg' height="200px" style='position:absolute;'></td>
+            <td class='col-2'><img src='/img/My%20Picture2.jpg' height="200px" style='position:absolute; border-radius:5px;'></td>
         </tr>
         <!--row 2-->
         <tr>
