--- a/html/books.html
+++ b/html/books.html
@@ -97,7 +97,7 @@
     }
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>alextanhongpin</title>
+    <title>books</title>
       </head>
   <body>
 
