--- a/html/drawing.html
+++ b/html/drawing.html
@@ -118,7 +118,7 @@
 
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>alextanhongpin</title>
+    <title>drawing</title>
       </head>
   <body>
 
