--- a/html/programming.html
+++ b/html/programming.html
@@ -3,6 +3,11 @@
   <head>
     <link rel="shortcut icon" href='../img/icon.ico'>
     <meta charset="utf-8">
+    <meta name="description" content="The personal website of Alex Tan Hong Pin, a fellow programmer from Malaysia. He is on a journey to find ways to contribute to mankind and to change the world.">
+    <meta name="keywords" content="css3, html5, phonegap, webgl, wp8, windows phone 8, cordova, alextanhongpin, programmer, malaysia, #amalaysianprogrammer">
+    <meta name="author" content="Alex Tan Hong Pin">  
+      
+      
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
@@ -111,7 +116,7 @@
     }
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>alextanhongpin</title>
+    <title>programming</title>
       </head>
   <body>
    
