--- a/html/guitar.html
+++ b/html/guitar.html
@@ -96,7 +96,7 @@
 
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>alextanhongpin</title>
+    <title>fingerstyle guitar</title>
       </head>
   <body>
 
