--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="description" content="The personal website of Alex Tan Hong Pin, a fellow programmer from Malaysia. He is on a journey to find ways to contribute to mankind and to change the world.">
-    <meta name="keywords" content="HTML, CSS, XML, XHTML, JavaScript">
+    <meta name="keywords" content="alextanhongpin, programmer, malaysia, #amalaysianprogrammer">
     <meta name="author" content="Alex Tan Hong Pin">  
     
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
