--- a/html/contact.html
+++ b/html/contact.html
@@ -18,7 +18,22 @@
 
 </script>
 <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBoTJ4CecHfWwl5bGuWgCbYU2orud-oW-o&sensor=TRUE_OR_FALSE"></script>
+      <script>
+      function initialize()
+{
+var mapProp = {
+  center:new google.maps.LatLng(51.508742,-0.120850),
+  zoom:5,
+  mapTypeId:google.maps.MapTypeId.ROADMAP
+  };
+var map=new google.maps.Map(document.getElementById("googleMap")
+  ,mapProp);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
       
+      
+      </script>
 <style>
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
     *{
@@ -143,12 +158,6 @@
         var extra = $(window).height() - $('body').height();
         $('footer').css('margin-top', extra);
     }
-    //gogoel map
-    var mapProp = {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:7,
-  mapTypeId: google.maps.MapTypeId.ROADMAP
-};
-    google.maps.event.addDomListener(window, 'load', initialize);
+
 });</script>
 </html>
