--- a/html/contact.html
+++ b/html/contact.html
@@ -127,7 +127,9 @@
         text-align: left;
         margin: 2px !important;
     }
-
+    #googleMap{
+        font-family: Arial;
+    }
 
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
