--- a/html/books.html
+++ b/html/books.html
@@ -94,6 +94,7 @@
 
     .book-list li{
         padding: 10px;
+		width: 100%;
     }
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
@@ -105,7 +106,7 @@
       <ul>
         <li class='col-2'><a href='guitar.html'>Guitar</a></li>
         <li class='col-2'><a href='programming.html'>Programming</a></li>
-        <li class='col-2'><a href=#>Photography</a></li>
+        <li class='col-2'><a href='photography.html'>Photography</a></li>
         <li class='col-2'><a href='drawing.html'>Drawing</a></li>
         <li class='col-2'><a href='books.html'>Bookshelf</a></li>
         <li class='col-2'><a href='contact.html'>Contact</a></li>
