--- a/html/drawing.html
+++ b/html/drawing.html
@@ -123,11 +123,10 @@
   <body>
 
       
-      
       <ul>
         <li class='col-2'><a href='guitar.html'>Guitar</a></li>
         <li class='col-2'><a href='programming.html'>Programming</a></li>
-        <li class='col-2'><a href=#>Photography</a></li>
+        <li class='col-2'><a href='photography.html'>Photography</a></li>
         <li class='col-2'><a href='drawing.html'>Drawing</a></li>
         <li class='col-2'><a href='books.html'>Bookshelf</a></li>
         <li class='col-2'><a href='contact.html'>Contact</a></li>
