--- a/html/let me help you decide.html
+++ b/html/let me help you decide.html
@@ -107,7 +107,8 @@
     h3, h1, p{
         
         /*font-family: 'Arvo', serif;*/
-        font-family: 'Lato', sans-serif;
+        /*font-family: 'Lato', sans-serif;*/
+        font-family: Tahoma;
         font-weight: 400;
     }
 
