--- a/html/let me help you decide.html
+++ b/html/let me help you decide.html
@@ -211,7 +211,16 @@ as for the iPad, it's a beautiful tablet and I use it all the time too. There ar
 	  -using droppages.
 	  -pancake
 	  -google sites
+      
+      you know my name, not my story
      
+	 stories of people wanting to reach their dreams b
+	 hallo,
+
+anyone willing to share their stories about their shattered dreams and hopes?
+
+like there is something you want to do, but you couldn't achieve it because of financial problems, or maybe because you don't believe in yourself, or maybe your parents said 'no'.
+	 
       <footer>Copyright &copy; 2014 by Alex Tan Hong Pin. All rights reserved. This site was created on 1st June 2014.</footer>
 
 
