--- a/html/photography.html
+++ b/html/photography.html
@@ -111,7 +111,7 @@
 
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>alextanhongpin</title>     
+    <title>someday this will all end</title>     
   </head>
   <body>
 
