--- a/html/programming/01_tutorial_html.html
+++ b/html/programming/01_tutorial_html.html
@@ -124,8 +124,35 @@
     &lt;/body&gt;
 &lt;/html&gt;
 </pre> 
+
+
+    <p>There are other useful elements that we'll be using repeatedly. One that you might have known is the <b>a</b> (anchor) element. It is basically a link to another page. Let's try adding a link in our page. The link of the page is defined in the <b>href</b> attribute. Href means Hypertext Reference , it's basically a link to another site.</p>
+  
+<pre class='prettyprint'>
+&lt;!DOCTYPE html&gt;
+&lt;html lang='en'&gt;
+    &lt;head&gt;
+        &lt;title&gt;title goes here&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+	&lt;h1&gt;My first website.&lt;/h1&gt;
+	&lt;p&gt;Making a website is not as hard as I think it would be!&lt;/p&gt;
+	&lt;img src='img/mypic.jpg'&gt;
+	&lt;ul&gt;
+		&lt;li&gt;I won't be lazy&lt;/li&gt;
+		&lt;li&gt;The last thing I want to do is slacking away.&lt;/li&gt;
+		&lt;li&gt;Alex is a nice person.&lt;/li&gt;
+	&lt;/ul&gt;
+	&lt;a href='link.html'&gt;The text in between the tags is what you will
+	see.&lt;/a&gt;
+    &lt;/body&gt;
+&lt;/html&gt;
+</pre>  
+  
+  <p>The last two elements that I want to introduce is the <b>div</b> (divisions) and also <b>span</b> (same as div, just for styling purpose, which we will learn in later chapters) . The <b>div</b> element is especially important when we start styling the page.</p>
   
   
+  <p>Last but not least, you do not have to memorize any of these. You will eventually get used to it. Please save a html file and named it template so that you can reuse it whenever you start creating new site. I will provide you a cheat sheet later, which you can refer when you need to. :)</p>
    </body>
     
   <script>$(document).ready(function(){
