--- a/html/07_preiserfigure.html
+++ b/html/07_preiserfigure.html
@@ -53,7 +53,7 @@
 
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
-    <title>danboard the robot</title>     
+    <title>preiser figures</title>     
   </head>
   <body>
 
