--- a/html/06_danboard.html
+++ b/html/06_danboard.html
@@ -107,15 +107,15 @@
     var pathToFolder = '06-danboard/IMG_';
     var space = '\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0';
     var imgData = [
-        {name: '4735.JPG', dof:'f/2.8', shutterSpeed:'1/50 sec',iso:'ISO-1600'},
-        {name: '2630.JPG', dof:'f/2.8', shutterSpeed:'1/20 sec',iso:'ISO-800'},
-        {name: '2641.JPG', dof:'f/2.8', shutterSpeed:'1/20 sec',iso:'ISO-800'},
-        {name: '3166.JPG', dof:'f/5', shutterSpeed:'1/60 sec',iso:'ISO-200'},
+        {name: '4735.jpg', dof:'f/2.8', shutterSpeed:'1/50 sec',iso:'ISO-1600'},
+        {name: '2630.jpg', dof:'f/2.8', shutterSpeed:'1/20 sec',iso:'ISO-800'},
+        {name: '2641.jpg', dof:'f/2.8', shutterSpeed:'1/20 sec',iso:'ISO-800'},
+        {name: '3166.jpg', dof:'f/5', shutterSpeed:'1/60 sec',iso:'ISO-200'},
         
-        {name: '3171.JPG', dof:'f/3.5', shutterSpeed:'1/125 sec',iso:'ISO-200'},
-        {name: '3174.JPG', dof:'f/5', shutterSpeed:'1/125 sec',iso:'ISO-200'},
-        {name: '3175.JPG', dof:'f/5', shutterSpeed:'1/80 sec',iso:'ISO-200'},
-        {name: '3619.JPG', dof:'f/3.5', shutterSpeed:'1/60 sec',iso:'ISO-100'},
+        {name: '3171.jpg', dof:'f/3.5', shutterSpeed:'1/125 sec',iso:'ISO-200'},
+        {name: '3174.jpg', dof:'f/5', shutterSpeed:'1/125 sec',iso:'ISO-200'},
+        {name: '3175.jpg', dof:'f/5', shutterSpeed:'1/80 sec',iso:'ISO-200'},
+        {name: '3619.jpg', dof:'f/3.5', shutterSpeed:'1/60 sec',iso:'ISO-100'},
         
     ];
     var camera = {
