--- a/html/07_preiserfigure.html
+++ b/html/07_preiserfigure.html
@@ -109,17 +109,17 @@
     var pathToFolder = '07-preiser_figure/';
     var space = '\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0';
     var imgData = [
-        {name: '01.JPG', dof:'f/2.8', shutterSpeed:'1/5 sec',iso:'ISO-100'},
-        {name: '02.JPG', dof:'f/8', shutterSpeed:'2 sec',iso:'ISO-100'},
-        {name: '03.JPG', dof:'f/5.6', shutterSpeed:'4 sec',iso:'ISO-100'},
-        {name: '04.JPG', dof:'f/5.6', shutterSpeed:'2.5 sec',iso:'ISO-100'},
-        {name: '05.JPG', dof:'f/2.8', shutterSpeed:'4 sec',iso:'ISO-100'},
+        {name: '01.jpg', dof:'f/2.8', shutterSpeed:'1/5 sec',iso:'ISO-100'},
+        {name: '02.jpg', dof:'f/8', shutterSpeed:'2 sec',iso:'ISO-100'},
+        {name: '03.jpg', dof:'f/5.6', shutterSpeed:'4 sec',iso:'ISO-100'},
+        {name: '04.jpg', dof:'f/5.6', shutterSpeed:'2.5 sec',iso:'ISO-100'},
+        {name: '05.jpg', dof:'f/2.8', shutterSpeed:'4 sec',iso:'ISO-100'},
 
-        {name: '06.JPG', dof:'f/2.8', shutterSpeed:'1/30 sec',iso:'ISO-400'},
-        {name: '07.JPG', dof:'f/4', shutterSpeed:'1/30 sec',iso:'ISO-100'},
-        {name: '08.JPG', dof:'f/2.8', shutterSpeed:'1/4 sec',iso:'ISO-100'},
-        {name: '09.JPG', dof:'f/11', shutterSpeed:'2 sec',iso:'ISO-400'},
-        {name: '10.JPG', dof:'f/2.8', shutterSpeed:'1/5 sec',iso:'ISO-100'},
+        {name: '06.jpg', dof:'f/2.8', shutterSpeed:'1/30 sec',iso:'ISO-400'},
+        {name: '07.jpg', dof:'f/4', shutterSpeed:'1/30 sec',iso:'ISO-100'},
+        {name: '08.jpg', dof:'f/2.8', shutterSpeed:'1/4 sec',iso:'ISO-100'},
+        {name: '09.jpg', dof:'f/11', shutterSpeed:'2 sec',iso:'ISO-400'},
+        {name: '10.jpg', dof:'f/2.8', shutterSpeed:'1/5 sec',iso:'ISO-100'},
 
         
     ];
