--- a/html/contact.html
+++ b/html/contact.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
           <link rel="stylesheet" type="text/css" href="../css/index.css">
        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
-<script src='/js/googleAnalytics.js'></script>
-
+    <script async src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script async src='/js/googleAnalytics.js'></script>
+<script  async src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbadHsfvGiSk19qQK0mQgMSmfDkYW2-dw&sensor=TRUE_OR_FALSE"></script>
+      <script async src='/js/googleMapAPI.js'></script>
 
 <style>
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
@@ -45,8 +46,7 @@
     /*@media only screen and (min-device-width: 720px){}*/
 </style>
       
-<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbadHsfvGiSk19qQK0mQgMSmfDkYW2-dw&sensor=TRUE_OR_FALSE"></script>
-      <script src='/js/googleMapAPI.js'></script>
+
    
       
     <title>contact</title>
