--- a/html/programming.html
+++ b/html/programming.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
           <link rel="stylesheet" type="text/css" href="../css/index.css">
        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
-<script src='/js/googleAnalytics.js'></script>
+    <script async src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script async src='/js/googleAnalytics.js'></script>
       
 <style>
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
