--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <link rel="stylesheet" type="text/css" href="css/grid_layout.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
-<script src='/js/googleAnalytics.js'></script>
+    <script async src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script async src='/js/googleAnalytics.js'></script>
 	
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 
