--- a/html/01_christmas_market.html
+++ b/html/01_christmas_market.html
@@ -15,8 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
           <link rel="stylesheet" type="text/css" href="../css/index.css">
        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script async src='http://code.jquery.com/jquery-2.1.1.js'></script>
-<script async src='/js/googleAnalytics.js'></script>
+
       
 
 <style>
@@ -116,7 +115,8 @@
         <source src='/audio/Hammock%20-%20I%20Could%20Hear%20The%20Water%20At%20The%20Edge%20Of%20All%20Things.mp3'>
     </audio>
 
-
+    <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script src='/js/googleAnalytics.js'></script>
     
   <script>$(document).ready(function(){
 
