--- a/html/07_preiserfigure.html
+++ b/html/07_preiserfigure.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" type="text/css" href="../css/grid_layout.css">
           <link rel="stylesheet" type="text/css" href="../css/index.css">
        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <script async src='http://code.jquery.com/jquery-2.1.1.js'></script>
-<script async src='/js/googleAnalytics.js'></script>
+
       
 <style>
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
@@ -105,7 +104,8 @@
         <source src='/audio/11%20The%20Equation.m4a'>
     </audio>
 
-
+    <script src='http://code.jquery.com/jquery-2.1.1.js'></script>
+<script src='/js/googleAnalytics.js'></script>
     
   <script>$(document).ready(function(){
 
