--- a/html/resume.html
+++ b/html/resume.html
@@ -246,7 +246,8 @@
         $('footer').css('margin-top', extra);
     }
         
-});</script>      
+});</script>
+    <script src='../js/index.js'></script>
       
 
   </body>
