--- a/html/programming/p02_clock.html
+++ b/html/programming/p02_clock.html
@@ -21,7 +21,7 @@
     }
     
     body{
-        background: #fff;
+        background: #eee;
         width: 100%;
         min-width: 240px;
         height: 100%;
