--- a/html/programming.html
+++ b/html/programming.html
@@ -70,7 +70,7 @@
         <a href="#part-six">#malaysia-flag</a>
         <a href="#part-seven">#brownian-motion</a>
         <a href="#part-eight">#matrix</a>
-        <a href="#part-nine">#audio-visualizer</a>
+        <!--<a href="#part-nine">#audio-visualizer</a>-->
         <a href="#part-ten">#3d-cube</a>
     </div>
 
@@ -132,14 +132,14 @@
         <a href="#tags">Return to top.</a>
    </section>
 
-      
+      <!--
       <section id='part-nine'>
         <h1>audio visualizer</h1>
         <iframe class='col-12' src="programming/p13_webkitaudio.html">
         </iframe><br>
         <a href="#tags">Return to top.</a>
    </section>
-
+-->
       
       <section id='part-ten'>
         <h1>3d cube</h1>
