--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <link rel="shortcut icon" href='img/icon.ico'>
     <link rel="stylesheet" type="text/css" href="css/index.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-<script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
+
 <style>
 
     @import url(http://fonts.googleapis.com/css?family=Dosis:300);
@@ -81,7 +79,7 @@
           <h3><b>About Me</b></h3>Watch me. I'm a person that lives my dream. I believe that everyone is special in their own way, and we give ourselves a meaning in life. If you couldn't find one (yet), look harder. If you don' stop looking for it, you will eventually find it. 
           <br>
           <br>
-          I know there are many people out there that are clueless about what they want to do - I seek those people, and motivate them. Because I was one of them. Besides, you get back as much as you give.&&\alpha&&<br><br>
+          I know there are many people out there that are clueless about what they want to do - I seek those people, and motivate them. Because I was one of them. Besides, you get back as much as you give.<br><br>
           <q>
               You may say I'm a dreamer, but I'm not the only one. I hope someday you'll join us. And the world will live as one.   </q>―John Lennon
       </div>
