--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script src='/js/backbone.js'></script>
 		
 	<script src='/js/templates.js'></script>
-	<script src='/js/index.js'></script>
+	<script src='/js/app.js'></script>
 	
 	<script>
 
