--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			main: $('#main'),
 			body: $('body')
 		});
-		Backbone.history.start({ pushState: true });
+        
+		Backbone.history.start();
 
 		
 		
