revision eighty-six
enabled both backbone.touch and fast click

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!----	<script src='/js/googleAnalytic.js'></script>-->
 	<script src='/js/underscore.js'></script>
 	<script src='/js/backbone.js'></script>
-        <!--<script src='/js/backbone-touch.js'></script>-->
+    <script src='/js/backbone-touch.js'></script>
 	<script src='/js/templates.js'></script>
 	<script src='/js/app.js'></script>
 	<script src='/js/fastclick.js'></script>
