revision eighty-seven
updated responsive layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		
 		<div id='main'></div>
 		
-		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. All rights reserved. (blueinktheme)</footer>
+		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. Design (:blueinktheme).</footer>
     <script src='/js/jquery.js'></script>
 <!----	<script src='/js/googleAnalytic.js'></script>-->
 	<script src='/js/underscore.js'></script>
