--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		
 		<div id='main'></div>
 		
-		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. Design (:blueinktheme).</footer>
+		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. Design (:blueinktheme). Send me an email at: alextan220990@gmail.com</footer>
     <script src='/js/jquery.js'></script>
-<!----	<script src='/js/googleAnalytic.js'></script>-->
+    <script src='/js/googleAnalytic.js'></script>
 	<script src='/js/underscore.js'></script>
 	<script src='/js/backbone.js'></script>
     <script src='/js/backbone-touch.js'></script>
