revision ninety-one
updated contact details

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 	<body> 
 		
 		<div id='main'></div>
-		
-		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. Design (:blueinktheme). Send me an email at: alextan220990@gmail.com</footer>
+	
+
+		<footer> Copyright &copy; 2014 by Alex Tan Hong Pin. Design (:blueinktheme). Send me an email at 
+ <a href="mailto:alextan220990@gmail.com">alextan220990@gmail.com</a>
+</footer>
     <script src='/js/jquery.js'></script>
     <script src='/js/googleAnalytic.js'></script>
 	<script src='/js/underscore.js'></script>
