chore: add book, contact and guitar pages

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>alextanhongpin :: my personal website</title>
-    <meta name="description" content="A minimalist progressive web app compliant template for hyperapp projects">
+
+    <title>alextanhongpin</title>
+		<meta charset="utf-8">
+		<meta name="description" content="The personal website of Alex Tan Hong Pin, a fellow programmer from Malaysia. He is on a journey to find ways to contribute to mankind and to change the world.">
+		<meta name="keywords" content="alextanhongpin, programmer, malaysia, #amalaysianprogrammer">
+		<meta name="author" content="Alex Tan Hong Pin"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
