--- a/games/index.html
+++ b/games/index.html
@@ -5,30 +5,13 @@
 <head>
   <title>asteroid :: remake</title>
   <link rel="stylesheet" href="./index.css">
-  <meta name="viewport" content="width=device-width,user-scalable=no">
 </head>
 
 <body>
 
-  <div id="message"></div>
+  <div id="info">asteroid :: remake</div>
 
-  <div class="controls controls--movement">
-    <div class="top">
-      <span id="up" class="control-button">&uarr;</span>
-    </div>
-    <div class="bottom">
-      <span id="left" class="control-button">&larr;</span>
-      <span id="right" class="control-button">&rarr;</span>
-    </div>
-  </div>
-
-  <div class="controls controls--action">
-    <div id="shoot" class="control-button">Atk</div>
-    <div id="teleport" class="control-button">Warp</div>
-    <div id="weapon" class="control-button">Swap</div>
-  </div>
-
-  <div id="help">
+  <div id="controls">
     <p>space - shoot</p>
     <p>shift - teleport</p>
     <p>enter - switch weapons</p>
@@ -36,7 +19,7 @@
     <p>&larr; &uarr; &rarr; &darr; - left, top, right, bottom</p>
   </div>
   <canvas id="canvas"></canvas>
-  <script src="./scripts/require.min.js " data-main="./index.js"></script>
+  <script src="./scripts/require.min.js" data-main="./index.js"></script>
 </body>
 
 </html>
