--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/icons/favicon.png">
+    <link rel="icon" type="image/png" href="/icons/favicon.ico">
     <link rel="stylesheet" href="/index.css">
     <link rel='stylesheet' href='/build/bundle.css'>
     <link rel='stylesheet' href='/build/index.css'>
