--- a/public/programming/p00_piano.html
+++ b/public/programming/p00_piano.html
@@ -4,7 +4,7 @@
 <head>
 
 <style>
-	@import url(http://fonts.googleapis.com/css?family=Dosis:300);
+	@import url(https://fonts.googleapis.com/css?family=Dosis:300);
     *{
         margin: 0;
         padding: 0;
